--- a/TODO.txt
+++ b/TODO.txt
@@ -1,21 +1,30 @@
 TODO:
 [* = done, ! = high priority, _ = in progress]
 
+User:
 *  dynamically load user stats on their page
-*  increment download counter on file download
-   comment javascript methods
-!  store user data when navigating the site
-   add support for favouriting
 !  store submissions in user data
    allow users to edit their profile; stop editing of other people's
-   search bar
-!  random page generation
+
+Graphics:
    load screenshots when viewing content/ uploading screenshots
-   add comment support
-*  html for loops for user page submissions
-_  html for loops for main page content
-   switch content folder saving to use ids
-   change navbar to logged in user-centric
 !  make a SVG site logo
    make an SVG for empty main page categories
+
+Sever:
+!  store user data when navigating the site
+*  html for loops for user page submissions
+*  html for loops for main page content
+   change navbar to logged in user-centric
    admin abilities
+
+Database:
+*  increment download counter on file download
+   add support for favouriting
+   add comment support
+
+Other:
+   comment javascript methods
+   search bar
+*  random page generation
+   switch content folder saving to use ids
