redirects to user page on account signup

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@ TODO:
 User:
 *  dynamically load user stats on their page
 !  store submissions in user data
+!  link submission user_id to the logged in user
    allow users to edit their profile; stop editing of other people's
 
 Graphics:
@@ -15,7 +16,7 @@ Sever:
 *  store user data when navigating the site
 *  html for loops for user page submissions
 *  html for loops for main page content
-_  change navbar to logged in user-centric
+*  change navbar to logged in user-centric
    admin abilities
 _  return the user id when an account is created, and set the session data to use it
 
@@ -30,3 +31,4 @@ Other:
 *  random page generation
 *  switch content folder saving to use ids
 *  remove tmp variable in uploading
+_  prevent non-logged in users from uploading
