--- a/TODO.txt
+++ b/TODO.txt
@@ -5,7 +5,7 @@ User:
 *  dynamically load user stats on their page
 *  store submissions in user data
 *  link submission user_id to the logged in user
-   allow users to edit their profile; stop editing of other people's
+_  allow users to edit their profile; stop editing of other people's
 !  ensure user control:
         generate a key when a user logs in on the sever and store it in sessionStorage and the user Database
         submit the user key with each request and use it to validate the presence of that user.
@@ -26,7 +26,7 @@ Sever:
 
 Database:
 *  increment download counter on file download
-_  add support for favouriting
+*  add support for favouriting
    add comment support
 
 Other:
