--- a/TODO.txt
+++ b/TODO.txt
@@ -6,12 +6,12 @@ User:
 *  store submissions in user data
 *  link submission user_id to the logged in user
 *  allow users to edit their profile; stop editing of other people's
-!  ensure user control:
+!_ ensure user control:
         generate a key when a user logs in on the sever and store it in sessionStorage and the user Database
         submit the user key with each request and use it to validate the presence of that user.
 
-_Graphics:
-   load screenshots when viewing content/ uploading screenshots
+!Graphics:
+_  load screenshots when viewing content/ uploading screenshots
 !  make an SVG site logo
    make an SVG for empty main page categories
    make an SVG for failed URLs
@@ -36,3 +36,4 @@ Other:
 *  switch content folder saving to use ids
 *  remove tmp variable in uploading
 *  prevent non-logged in users from uploading
+!  fix the content categories discrepancy!
