--- a/TODO.txt
+++ b/TODO.txt
@@ -11,7 +11,7 @@ User:
         submit the user key with each request and use it to validate the presence of that user.
 
 !Graphics:
-_  load screenshots when viewing content/ uploading screenshots
+*  load screenshots when viewing content/ uploading screenshots
 !  make an SVG site logo
    make an SVG for empty main page categories
    make an SVG for failed URLs
@@ -36,4 +36,6 @@ Other:
 *  switch content folder saving to use ids
 *  remove tmp variable in uploading
 *  prevent non-logged in users from uploading
-!  fix the content categories discrepancy!
+!_ fix the content categories discrepancy!
+          make all content have screenshots!
+          no difference between content types!
