link for empty category upload

--- a/TODO.txt
+++ b/TODO.txt
@@ -11,7 +11,7 @@ User:
 !_Graphics:
 *  load screenshots when viewing content/ uploading screenshots
 !  make an SVG site logo
-   make an SVG for empty main page categories
+*  make an SVG for empty main page categories
    make an SVG for failed URLs
    animate slide transitions using https://www.w3schools.com/howto/howto_js_slideshow.asp
 *  remove slide arrows for one screenshot case
@@ -36,6 +36,7 @@ Other:
    comment javascript methods
    search bar
    tags!
+   add more example users and uploads
 *  random page generation
 *  switch content folder saving to use ids
 *  remove tmp variable in uploading
