--- a/TODO.txt
+++ b/TODO.txt
@@ -37,6 +37,7 @@ Other:
    search bar
    tags!
    add more example users and uploads
+   name address bar with current page
 *  random page generation
 *  switch content folder saving to use ids
 *  remove tmp variable in uploading
