--- a/TODO.txt
+++ b/TODO.txt
@@ -34,7 +34,7 @@ Other:
 *  add main page category descriptions
 *  add support for generic screenshots/ make screenshots not mandatory
 *  refactor file_submitted.js
-_  comment javascript methods
+*  comment javascript methods
 _  add more example users and uploads
 *  name address bar with current page
 *  random page generation
